force-app/main/default/objects/Evaluation__c/Evaluation__c.object-meta.xml
<CustomObject>
    <label>Evaluation</label>
    <nameField>
        <displayFormat>Evaluation-{00000}</displayFormat>
        <label>Evaluation #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>