force-app/main/default/objects/Evaluation__c/fields/Career_Coach_Meeting_Summary__c.field-meta.xml
<CustomField>
    <fullName>Career_Coach_Meeting_Summary__c</fullName>
    <label>Career Coach Meeting Summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>