force-app/main/default/objects/Evaluation__c/fields/Career_Coach_Summary__c.field-meta.xml
<CustomField>
    <fullName>Career_Coach_Summary__c</fullName>
    <formula>if ( not(isblank(Close_Date__c)),

text(Date__c) &amp; &quot; | Career Coach: &quot; &amp; Created_By_Summary__c &amp; &quot; | Resolved&quot;,

text(Date__c) &amp; &quot; | Career Coach: &quot; &amp; Created_By_Summary__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Career Coach Summary</label>
    <type>Text</type>
</CustomField>