force-app/main/default/objects/Evaluation__c/fields/Cleanslate_1_0_Total_Conflict_Mgmt__c.field-meta.xml
<CustomField>
    <fullName>Cleanslate_1_0_Total_Conflict_Mgmt__c</fullName>
    <formula>if (RecordTypeId= &quot;01231000001ERwY&quot;, 

if (Question_15_Response__c, 1, 0),

NULL)</formula>
    <inlineHelpText>1 point if checked.</inlineHelpText>
    <label>Cleanslate 1.0 Total: Conflict Mgmt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>