force-app/main/default/objects/Evaluation__c/fields/Cleanslate_1_0_Total_Customer_Service__c.field-meta.xml
<CustomField>
    <fullName>Cleanslate_1_0_Total_Customer_Service__c</fullName>
    <formula>if (RecordTypeId= &quot;01231000001ERwY&quot;, 

if((if (Question_11_Response__c, 1, 0) + 
if (Question_12_Response__c, 1, 0) + 
if (Question_13_Response__c, 1, 0) + 
if (Question_14_Response__c, 1, 0)) = 4, 1, 0),

NULL)</formula>
    <inlineHelpText>All checked awarded 1 point. Otherwise 0 points.</inlineHelpText>
    <label>Cleanslate 1.0 Total: Customer Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>