force-app/main/default/objects/Evaluation__c/fields/Cleanslate_1_0_Total_Leadership_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Cleanslate_1_0_Total_Leadership_Bonus__c</fullName>
    <formula>if (RecordTypeId= &quot;01231000001ERwY&quot;, 

(if (Cleanslate_1_0_Total_Professionalism__c + Cleanslate_1_0_Total_Ownership_of_Route__c + Cleanslate_1_0_Total_Customer_Service__c + Cleanslate_1_0_Total_Conflict_Mgmt__c = 6, 

(if (Question_16_Response__c, 1, 0) + 
if (Question_17_Response__c, 1, 0) + 
if (Question_18_Response__c, 1, 0)), 

0)),

NULL)</formula>
    <label>Cleanslate 1.0 Total: Leadership Bonus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>