force-app/main/default/objects/Evaluation__c/fields/Cleanslate_1_0_Total_Professionalism__c.field-meta.xml
<CustomField>
    <fullName>Cleanslate_1_0_Total_Professionalism__c</fullName>
    <formula>if (RecordTypeId= &quot;01231000001ERwY&quot;,

case( 
(if (Question_01_Response__c, 1, 0) + 
if (Question_02_Response__c, 1, 0) + 
if (Question_03_Response__c, 1, 0) + 
if (Question_04_Response__c, 1, 0) + 
if (Question_05_Response__c, 1, 0)) 

, 0, 0 
, 1, 0 
, 2, 0 
, 3, 1 
, 2),

NULL)</formula>
    <inlineHelpText>Out of 2 points. 3 checked to receive 1 point; 4 or 5 checked to receive 2 points.</inlineHelpText>
    <label>Cleanslate 1.0 Total: Professionalism</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>