force-app/main/default/objects/Evaluation__c/fields/Cleanslate_Eval_Summary__c.field-meta.xml
<CustomField>
    <fullName>Cleanslate_Eval_Summary__c</fullName>
    <formula>text(Date__c) &amp; &quot; | Average: &quot; &amp; text(Competency_Average__c)  &amp; &quot; | Crew Chief: &quot; &amp; Created_By_Summary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cleanslate Eval Summary</label>
    <type>Text</type>
</CustomField>