force-app/main/default/objects/Evaluation__c/fields/Cleanslate_Evaluation_Summary__c.field-meta.xml
<CustomField>
    <fullName>Cleanslate_Evaluation_Summary__c</fullName>
    <formula>Case_Record__r.Client_Name__c &amp; br() 
&amp; text(Date__c) &amp; &quot; | Average: &quot; &amp; text(Competency_Average__c) &amp; br() 
&amp; &quot;-------------------------------&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cleanslate Evaluation Summary</label>
    <type>Text</type>
</CustomField>