force-app/main/default/objects/Evaluation__c/fields/Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Reason__c</fullName>
    <label>Close Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>