force-app/main/default/objects/Evaluation__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Labelled as &quot;Action Steps (If Applicable)&quot; on the Mock Interview Feedback form</description>
    <inlineHelpText>Labelled as &quot;Action Steps (If Applicable)&quot; on the Mock Interview Feedback form</inlineHelpText>
    <label>Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>