force-app/main/default/objects/Evaluation__c/fields/Competency_Average__c.field-meta.xml
<CustomField>
    <fullName>Competency_Average__c</fullName>
    <formula>if (RecordTypeId= &quot;01231000001ERwT&quot; || RecordTypeId = &quot;01231000001ERwd&quot;, 

(Competency_Total_Time_Management__c + Competency_Total_Communication__c + Competency_Total_Professionalism__c + Competency_Total_Conflict_Resolution__c + Competency_Total_Teamwork__c)/5, 

NULL)</formula>
    <inlineHelpText>Cleanslate Evaluations: Out of 9 points, the average of the Competency Totals.</inlineHelpText>
    <label>Cleanslate Competency Average</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>