force-app/main/default/objects/Evaluation__c/fields/Competency_Total_Professionalism__c.field-meta.xml
<CustomField>
    <fullName>Competency_Total_Professionalism__c</fullName>
    <formula>if (RecordTypeId= &quot;01231000001ERwT&quot; || RecordTypeId = &quot;01231000001ERwd&quot;, 

case( 
(if (Question_09_Response__c, 1, 0) + 
if (Question_10_Response__c, 1, 0) + 
if (Question_11_Response__c, 1, 0) + 
if (Question_12_Response__c, 1, 0)) 

, 0, 0 
, 1, 3 
, 2, 5 
, 3, 8 
, 9)

, NULL)</formula>
    <inlineHelpText>Out of 9 points. Must have all 4 questions checked off to receive full 9 points; 3 checked to receive 8 points; 2 checked to receive 5 points; 1 checked to receive 3 points.</inlineHelpText>
    <label>Cleanslate Total: Professionalism</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>