force-app/main/default/objects/Evaluation__c/fields/Competency_Total_Time_Management__c.field-meta.xml
<CustomField>
    <fullName>Competency_Total_Time_Management__c</fullName>
    <formula>if (RecordTypeId= &quot;01231000001ERwT&quot; || RecordTypeId = &quot;01231000001ERwd&quot;, 

case( 
(if (Question_01_Response__c, 1, 0) + 
if (Question_02_Response__c, 1, 0) + 
if (Question_03_Response__c, 1, 0)) 

, 0, 0 
, 1, 3 
, 2, 6 
, 9)

, NULL)</formula>
    <inlineHelpText>Out of 9 points. Must have all 3 questions checked off to receive full 9 points; 2 checked to receive 6 points; 1 checked to receive 3 points.</inlineHelpText>
    <label>Cleanslate Total: Time Management</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>