force-app/main/default/objects/Evaluation__c/fields/Connects_Competency_Average__c.field-meta.xml
<CustomField>
    <fullName>Connects_Competency_Average__c</fullName>
    <formula>(Connects_Total_Time_Management__c + Connects_Total_Communication__c + Connects_Total_Professionalism__c + Connects_Total_Conflict_Management__c + Connects_Total_Teamwork__c)/5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connects Competency Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>