force-app/main/default/objects/Evaluation__c/fields/Connects_Total_Communication__c.field-meta.xml
<CustomField>
    <fullName>Connects_Total_Communication__c</fullName>
    <formula>case(
(if (Question_04_Response__c, 1, 0) +
if (Question_05_Response__c, 1, 0) +
if (Question_06_Response__c, 1, 0) +
if (Question_07_Response__c, 1, 0) +
if (Question_08_Response__c, 1, 0))

, 0, 0
, 1, 3
, 2, 5
, 3, 7
, 4, 8
, 9)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connects Total: Communication</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>