force-app/main/default/objects/Evaluation__c/fields/Connects_Total_Conflict_Management__c.field-meta.xml
<CustomField>
    <fullName>Connects_Total_Conflict_Management__c</fullName>
    <formula>case(
(if (Question_13_Response__c, 1, 0) +
if (Question_14_Response__c, 1, 0) +
if (Question_15_Response__c, 1, 0))

, 0, 0
, 1, 3
, 2, 6
, 9)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connects Total: Conflict Management</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>