force-app/main/default/objects/Evaluation__c/fields/Connects_Total_Professionalism__c.field-meta.xml
<CustomField>
    <fullName>Connects_Total_Professionalism__c</fullName>
    <formula>case(
(if (Question_09_Response__c, 1, 0) +
if (Question_10_Response__c, 1, 0) +
if (Question_11_Response__c, 1, 0) +
if (Question_12_Response__c, 1, 0))

, 0, 0
, 1, 3
, 2, 5
, 3, 8
, 9)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connects Total: Professionalism</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>