force-app/main/default/objects/Evaluation__c/fields/Connects_Total_Teamwork__c.field-meta.xml
<CustomField>
    <fullName>Connects_Total_Teamwork__c</fullName>
    <formula>case(
(if (Question_16_Response__c, 1, 0) +
if (Question_17_Response__c, 1, 0) +
if (Question_18_Response__c, 1, 0))

, 0, 0
, 1, 3
, 2, 6
, 9)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connects Total: Teamwork</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>