force-app/main/default/objects/Evaluation__c/fields/Created_By_Summary__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Summary__c</fullName>
    <formula>if (not (isblank (Created_By_External_Form_or_Legacy__c)), Created_By_External_Form_or_Legacy__c, CreatedBy.Full_Name__c)</formula>
    <inlineHelpText>If created through web form or imported from legacy system, displays original creator&apos;s name. Otherwise, displays name of Salesforce Evaluation record creator.</inlineHelpText>
    <label>Created By, Summary</label>
    <type>Text</type>
</CustomField>