force-app/main/default/objects/Evaluation__c/fields/Evaluation_Form__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evaluation Form</label>
    <referenceTo>Evaluation_Form__c</referenceTo>
    <relationshipLabel>Evaluations</relationshipLabel>
    <relationshipName>Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>