force-app/main/default/objects/Evaluation__c/fields/Evaluation_Summary__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Summary__c</fullName>
    <description>For use in Cara Central record choice set.</description>
    <formula>text(Date__c) &amp; &quot; | Score: &quot; &amp; text(round(Mock_Interview_Score__c,3) * 100) &amp; &quot;%&quot; &amp; &quot; | Mock Interviewer: &quot; &amp;  Created_By_Summary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mock Interview Summary</label>
    <type>Text</type>
</CustomField>