force-app/main/default/objects/Evaluation__c/fields/Explanation_for_Praise__c.field-meta.xml
<CustomField>
    <fullName>Explanation_for_Praise__c</fullName>
    <label>Explanation for Praise</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>