force-app/main/default/objects/Evaluation__c/fields/Explantation_for_Needed_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Explantation_for_Needed_Improvement__c</fullName>
    <label>Explanation for Needed Improvement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>