force-app/main/default/objects/Evaluation__c/fields/Front_Desk_Summary__c.field-meta.xml
<CustomField>
    <fullName>Front_Desk_Summary__c</fullName>
    <formula>if ( 

not(isblank(Close_Date__c)),

text(Date__c) &amp; &quot; | Evaluator: &quot; &amp; Created_By_Summary__c &amp; &quot; | Resolved&quot;,

text(Date__c) &amp; &quot; | Evaluator: &quot; &amp; Created_By_Summary__c &amp; &quot; | Unresolved - Pending Intern Response&quot;

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Front Desk Summary</label>
    <type>Text</type>
</CustomField>