force-app/main/default/objects/Evaluation__c/fields/Legacy_Access_Evaluation_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Access_Evaluation_ID__c</fullName>
    <label>Legacy Access Evaluation ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>