force-app/main/default/objects/Evaluation__c/fields/Legacy_Assessment_Num__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Assessment_Num__c</fullName>
    <label>Legacy Assessment #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>