force-app/main/default/objects/Evaluation__c/fields/Mock_Interview_Conflict_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Mock_Interview_Conflict_Resolution__c</fullName>
    <formula>NULL</formula>
    <label>Mock Interview: Conflict Management</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>