force-app/main/default/objects/Evaluation__c/fields/Mock_Interview_Teamwork__c.field-meta.xml
<CustomField>
    <fullName>Mock_Interview_Teamwork__c</fullName>
    <formula>NULL</formula>
    <label>Mock Interview: Teamwork</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>