force-app/main/default/objects/Evaluation__c/fields/Mock_Interview_Time_Management__c.field-meta.xml
<CustomField>
    <fullName>Mock_Interview_Time_Management__c</fullName>
    <formula>null</formula>
    <label>Mock Interview: Time Management</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>