force-app/main/default/objects/Evaluation__c/fields/Number_of_Mock_Interviews__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Mock_Interviews__c</fullName>
    <formula>if ( contains(Evaluation_Form__r.Name, &quot;Mock Interview&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Mock Interviews</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>