force-app/main/default/objects/Evaluation__c/fields/Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Opportunities__c</fullName>
    <description>Used on Mock Interview Feedback, only.
Labelled as &quot;Opportunities for Improvement&quot; on the Mock Interview Feedback form.</description>
    <inlineHelpText>Opportunities for Improvement</inlineHelpText>
    <label>Opportunities</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>