force-app/main/default/objects/Evaluation__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Evaluations</relationshipLabel>
    <relationshipName>Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>