force-app/main/default/objects/Evaluation__c/fields/Participant_Name__c.field-meta.xml
<CustomField>
    <fullName>Participant_Name__c</fullName>
    <formula>Case_Record__r.Client_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant Name</label>
    <type>Text</type>
</CustomField>