force-app/main/default/objects/Evaluation__c/fields/Question_01_Response__c.field-meta.xml
<CustomField>
    <fullName>Question_01_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Question 01 Response</label>
    <type>Checkbox</type>
</CustomField>