force-app/main/default/objects/Evaluation__c/fields/Red_Flag__c.field-meta.xml
<CustomField>
    <fullName>Red_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used on Mock Interview Feedback, only.</description>
    <inlineHelpText>Specific need for concerning coachable follow up.</inlineHelpText>
    <label>Red Flag</label>
    <type>Checkbox</type>
</CustomField>