force-app/main/default/objects/Evaluation__c/fields/Red_Flag_Description__c.field-meta.xml
<CustomField>
    <fullName>Red_Flag_Description__c</fullName>
    <label>Red Flag Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>