force-app/main/default/objects/Evaluation__c/fields/Red_Flag_Type__c.field-meta.xml
<CustomField>
    <fullName>Red_Flag_Type__c</fullName>
    <label>Red Flag Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Health Concern</fullName>
            </value>
            <value>
                <fullName>Personal Instability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>