force-app/main/default/objects/Evaluation__c/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <description>Used on Mock Interview Feedback, only.</description>
    <label>Strengths</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>