force-app/main/default/objects/Evaluation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Person Interview</fullName>
            </value>
            <value>
                <fullName>Phone Interview</fullName>
            </value>
            <value>
                <fullName>Virtual Interview</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>