force-app/main/default/objects/Evaluation__c/fields/Would_Hire__c.field-meta.xml
<CustomField>
    <fullName>Would_Hire__c</fullName>
    <inlineHelpText>Added February 2019.</inlineHelpText>
    <label>Would Hire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>