force-app/main/default/objects/Evaluation__c/recordTypes/Career_Coach_Feedback.recordType-meta.xml
<RecordType>
    <fullName>Career_Coach_Feedback</fullName>
    <active>true</active>
    <label>Career Coach Feedback</label>
</RecordType>