force-app/main/default/objects/Evaluation__c/recordTypes/Cleanslate_Intern_Evaluation_1_0.recordType-meta.xml
<RecordType>
    <fullName>Cleanslate_Intern_Evaluation_1_0</fullName>
    <active>true</active>
    <description>Cleanslate Intern Evaluations before October 2016</description>
    <label>Cleanslate Intern Evaluation 1.0</label>
</RecordType>