force-app/main/default/objects/Evaluation__c/recordTypes/Cleanslate_Intern_Evaluation_2_0.recordType-meta.xml
<RecordType>
    <fullName>Cleanslate_Intern_Evaluation_2_0</fullName>
    <active>true</active>
    <description>Cleanslate Intern Evaluations starting October 2016, based on SOE competencies</description>
    <label>Cleanslate Intern Evaluation 2.0</label>
</RecordType>