force-app/main/default/objects/Evaluation__c/recordTypes/Connects_Supervisor_Evaluation.recordType-meta.xml
<RecordType>
    <fullName>Connects_Supervisor_Evaluation</fullName>
    <active>true</active>
    <label>Connects Supervisor Evaluation</label>
</RecordType>