force-app/main/default/objects/Evaluation__c/recordTypes/Emerson_Evaluation.recordType-meta.xml
<RecordType>
    <fullName>Emerson_Evaluation</fullName>
    <active>true</active>
    <description>General evaluation form created in March 2017 for use across various CRED internship opportunities, based on SOE competencies</description>
    <label>CRED Evaluation</label>
</RecordType>