force-app/main/default/objects/Evaluation__c/validationRules/Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Date__c &gt; today()</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>Date is in future. Please review and correct.</errorMessage>
</ValidationRule>