force-app/main/default/objects/Evaluation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Competency_Total_Communication__c</columns>
    <columns>Competency_Total_Conflict_Resolution__c</columns>
    <columns>Competency_Total_Professionalism__c</columns>
    <columns>Competency_Total_Teamwork__c</columns>
    <columns>Competency_Total_Time_Management__c</columns>
    <columns>Created_By_External_Form_or_Legacy__c</columns>
    <columns>Created_By_Summary__c</columns>
    <columns>Competency_Average__c</columns>
    <columns>Comments__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Question_01_Response__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>